Added a mention of the convoy pattern with a reference to CPDT.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -949,11 +949,11 @@ Even though when matching on the proof of \m{QSDom A l} there are two possible c
 ]
 {Coq}{Snippets/Chapter2/BoveCapretta.v}
 
-Armed with both lemmas, we can now implement \m{qs'} -- the implementation is shown in the listing above. The first important point to notice is that the principal argument is \m{d\ :\ QSDom A l}, as can be seen from the annotation \{\m{struct d}\}, but we don't match on \m{d} -- the definition proceeds like for our initial \m{qs'} from section \ref{template}, when the termination checker was turned off.
+Armed with both lemmas, we can now implement \m{qs'} -- the implementation is shown in the listing above. The first important point to notice is that the principal argument is \m{d\ :\ QSDom A l}, as can be seen from the annotation \{\m{struct d}\}, but we don't match on \m{d} -- the definition proceeds like for our initial \m{qs'} from \hyperref[template]{chapter 3}, when the termination checker was turned off.
 
 The second important thing to notice is that, unlike previously, we don't just simply match on \m{short l} or use \m{let}s to pattern match on the results of \m{choosePivot} or \m{partition}. This time in each of these cases we have to use the full power of Coq's dependent pattern matching in order to generalize the return types. This is because we need to feed equations like \m{short l = Some (h, t)} into our inversion lemmas.
 
-Doing this is simple, but the code looks a bit scary. For example, consider the fragment \m{match short l as x return short l = x -> list A with\ ...\ end eq\_refl}. It works like this. We match on \m{short l}. We use \m{x} to name the matched value (i.e. either \m{Some (h, t)} or \m{None}). Then we say that the return type of the whole match is \m{short l = x -> list A}, but after the \m{end} we have to apply the function returned by the \m{match} to \m{eq\_refl}, because we want our final result to be just \m{list A}. This works, because Coq now knows that \m{eq\_refl\ :\ short l = short l} is convertible with \m{eq\_refl\ :\ short l = x}, because \m{x} in the branches reduces to either \m{None} or \m{Some (h, t)} and these are convertible with \m{short l} because a match was performed. We have to repeat a similar maneuver three times, once for each of the equations we need for our inversion lemmas.
+Doing this is simple, but the code looks a bit scary. For example, consider the fragment \m{match short l as x return short l = x -> list A with\ ...\ end eq\_refl}. It works like this: we match on \m{short l} and use \m{x} to name the matched value (i.e. either \m{Some (h, t)} or \m{None}). Then we say that the return type of the whole match is \m{short l = x -> list A}, but after the \m{end} we have to apply the function returned by the \m{match} to \m{eq\_refl}, because we want our final result to be just \m{list A}. This works, because Coq now knows that \m{eq\_refl\ :\ short l = short l} is convertible with \m{eq\_refl\ :\ short l = x}, because \m{x} in the branches reduces to either \m{None} or \m{Some (h, t)} and these are convertible with \m{short l} because a match was performed. We have to repeat a similar maneuver three times, once for each of the equations we need for our inversion lemmas. This way of generalizing \m{match} results with an equality is sometimes called ``the convoy pattern''. See chapter ``MoreDep'' from Adam Chlipala's CPDT \cite{CPDT} for a more thorough description.
 
 The last important thing to notice is how the recursive calls look like. We use the lemma \m{Long\_inv\_lt} applied to the proof of \m{QSDom A l} and the three equations and it retrieves for us a proof of \m{QSDom A lt} which we use in the recursive call of \m{qs'}. Coq can see from the body of \m{Long\_inv\_lt} that it is a structurally smaller subterm of \m{d} and thus the recursive call is valid.
 
